--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -36,7 +36,7 @@ $neon-pink: rgba(255, 0, 255, 0.7);
       transparent 49%
     ),
     linear-gradient(48deg, rgba(183, 0, 255, 0.3), transparent 53%),
-    url("https://cdn.prod.website-files.com/652fd91d8a45c803a3d878f6/65b40bfdbedf6d0cfdd98a7c_waves%20white%20tr2.png"),
+    url("/background-intro.png"),
     linear-gradient(212deg, #10060f, #2a1130);
   background-position: 0 0, 0 0, 50% 30%, 0 0;
   background-size: auto, auto, cover, auto;
