--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -25,10 +25,12 @@ $neon-pink: rgba(255, 0, 255, 0.7);
 }
 
 .intro {
+  will-change: transform, opacity;
   height: calc(100vh - 100px);
   overflow: hidden;
   // background: linear-gradient(180deg, $dark-purple-1, $dark-purple-2);
   position: relative;
+  contain: layout;
 
   background-image: linear-gradient(
       210deg,
