optimize animations in intro

--- a/src/components/intro/Intro.scss
+++ b/src/components/intro/Intro.scss
@@ -74,6 +74,7 @@ $neon-pink: rgba(255, 0, 255, 0.7);
       flex-direction: column;
       justify-content: center;
       gap: 40px;
+      will-change: transform, opacity;
 
       @include mobile {
         width: 100%;
